# mini_data_analyst

./: LICENSE  README.md  model.pkl  pyproject.toml  requirements.txt
work/: Analysis.py  Graph.py  ML_algo.py  data_analyst_bot.py
